--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@aws-sdk/client-s3": "^3.668.0",
     "@aws-sdk/s3-request-presigner": "^3.668.0",
     "@prisma/client": "^5.20.0",
+    "@supabase/supabase-js": "^2.47.10",
     "@t3-oss/env-core": "^0.11.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
